# internal/user/docs/swagger.json
@@ -12,6 +12,54 @@
     },
     "basePath": "/v1/api",
     "paths": {
+        "/upload": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "media upload",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Media"
+                ],
+                "summary": "Upload media upload",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Media",
+                        "name": "file",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_khuong02_backend_pkg_helper.ResponseSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_khuong02_backend_pkg_helper.ResponseErr"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_khuong02_backend_pkg_helper.ResponseErr"
+                        }
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "description": "Login",
@@ -159,10 +207,23 @@
                 },
                 "message": {}
             }
+        },
+        "github_com_khuong02_backend_pkg_helper.ResponseSuccess": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "http_code": {
+                    "type": "integer"
+                },
+                "message": {}
+            }
         }
     },
     "securityDefinitions": {
-        "AuthToken": {
+        "BearerAuth": {
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
